TreeAnalysis/Plot/Temp5/SR_irred_bkg_div.txt
Info in <TCanvas::Print>: file Stack_SR_irred_bkg_div.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_SR_irred_bkg_div.root has been created

######### MonteCarlo samples #########

WWZJets .......................... 0.302447076057
TTZJets .......................... 1.58860274195
TTWWJets .......................... 0.0043484694387
digit anything you want to end the script 
Traceback (most recent call last):
  File "./scriptStack.py", line 46, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
